--- a/robot.plist
+++ b/robot.plist
@@ -22,27 +22,13 @@
 <date>2012-09-12T17:02:39Z</date>
 <key>tokens</key>
 <array>
-<integer>32</integer>
+<integer>31</integer>
 </array>
 <key>ID</key>
 <string>Anybody-2</string>
 <key>text</key>
-<string>Hello robot
+<string>HELLO ROBOT
 </string>
-</dict>
-<dict>
-<key>count</key>
-<real>1.0</real>
-<key>modified</key>
-<date>2016-06-12T08:58:17Z</date>
-<key>tokens</key>
-<array>
-<integer>32</integer>
-</array>
-<key>ID</key>
-<string>Anybody-3</string>
-<key>text</key>
-<string>Ok, Ando, how are you? </string>
 </dict>
 <dict>
 <key>count</key>
@@ -51,7 +37,7 @@
 <date>2016-06-12T08:58:49Z</date>
 <key>tokens</key>
 <array>
-<integer>32</integer>
+<integer>31</integer>
 </array>
 <key>ID</key>
 <string>Anybody-5</string>
@@ -62,10 +48,39 @@
 <key>count</key>
 <real>1.0</real>
 <key>modified</key>
+<date>2016-06-16T20:55:44Z</date>
+<key>tokens</key>
+<array>
+<integer>31</integer>
+</array>
+<key>ID</key>
+<string>Anybody-4</string>
+<key>text</key>
+<string>OK ANDO HOW ARE YOU
+</string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-16T20:57:06Z</date>
+<key>tokens</key>
+<array>
+<integer>31</integer>
+</array>
+<key>ID</key>
+<string>Anybody-9</string>
+<key>text</key>
+<string>SEE ONE CAN DO</string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
 <date>2016-06-12T09:01:12Z</date>
 <key>tokens</key>
 <array>
-<integer>32</integer>
+<integer>31</integer>
 </array>
 <key>ID</key>
 <string>Anybody-6</string>
@@ -79,7 +94,7 @@
 <date>2016-06-12T09:01:29Z</date>
 <key>tokens</key>
 <array>
-<integer>32</integer>
+<integer>31</integer>
 </array>
 <key>ID</key>
 <string>Anybody-7</string>
@@ -93,12 +108,47 @@
 <date>2016-06-12T09:02:06Z</date>
 <key>tokens</key>
 <array>
-<integer>32</integer>
+<integer>31</integer>
 </array>
 <key>ID</key>
 <string>Anybody-8</string>
 <key>text</key>
 <string>you should visit the United States one day</string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-16T20:53:43Z</date>
+<key>tokens</key>
+<array>
+<integer>31</integer>
+</array>
+<key>ID</key>
+<string>Anybody-1</string>
+<key>text</key>
+<string>ANDO HOW ARE YOU
+</string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-17T14:46:40Z</date>
+<key>ID</key>
+<string>Anybody-3</string>
+<key>text</key>
+<string>what is your name? </string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-17T14:46:49Z</date>
+<key>ID</key>
+<string>Anybody-10</string>
+<key>text</key>
+<string>how old are you? </string>
 </dict>
 </array>
 <key>answers</key>
@@ -112,11 +162,11 @@
 <date>2015-06-08T09:55:59Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>31</integer>
-<integer>57</integer>
-<integer>36</integer>
-<integer>27</integer>
+<integer>32</integer>
+<integer>30</integer>
+<integer>56</integer>
+<integer>35</integer>
+<integer>26</integer>
 </array>
 <key>ID</key>
 <string>please</string>
@@ -132,10 +182,10 @@
 <date>2016-06-12T09:14:38Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>31</integer>
-<integer>57</integer>
-<integer>35</integer>
+<integer>32</integer>
+<integer>30</integer>
+<integer>56</integer>
+<integer>34</integer>
 </array>
 <key>ID</key>
 <string>talk_soon</string>
@@ -151,10 +201,10 @@
 <date>2016-06-12T09:15:10Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>57</integer>
-<integer>31</integer>
-<integer>35</integer>
+<integer>32</integer>
+<integer>56</integer>
+<integer>30</integer>
+<integer>34</integer>
 </array>
 <key>ID</key>
 <string>stay_japan</string>
@@ -170,10 +220,10 @@
 <date>2016-06-12T09:16:22Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>31</integer>
-<integer>57</integer>
-<integer>35</integer>
+<integer>32</integer>
+<integer>30</integer>
+<integer>56</integer>
+<integer>34</integer>
 </array>
 <key>ID</key>
 <string>visit</string>
@@ -189,8 +239,8 @@
 <date>2016-06-12T09:16:56Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>31</integer>
+<integer>32</integer>
+<integer>30</integer>
 </array>
 <key>ID</key>
 <string>good</string>
@@ -206,9 +256,9 @@
 <date>2016-06-12T09:17:33Z</date>
 <key>tokens</key>
 <array>
-<integer>33</integer>
-<integer>31</integer>
-<integer>57</integer>
+<integer>32</integer>
+<integer>30</integer>
+<integer>56</integer>
 </array>
 <key>ID</key>
 <string>goodday</string>
@@ -216,6 +266,36 @@
 <string>Alright, have a good day!</string>
 <key>speaker</key>
 <integer>1</integer>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-17T14:33:39Z</date>
+<key>tokens</key>
+<array>
+<integer>32</integer>
+<integer>30</integer>
+</array>
+<key>ID</key>
+<string>helloexample</string>
+<key>text</key>
+<string>hello, how are you</string>
+</dict>
+<dict>
+<key>count</key>
+<real>1.0</real>
+<key>modified</key>
+<date>2016-06-17T14:46:56Z</date>
+<key>tokens</key>
+<array>
+<integer>32</integer>
+<integer>30</integer>
+</array>
+<key>ID</key>
+<string>helloexample</string>
+<key>text</key>
+<string>My name is ando </string>
 </dict>
 </array>
 <key>answer_format</key>
@@ -228,9 +308,13 @@
 <array>
 <dict>
 <key>param</key>
-<string>0.9914341435185184 0.884837962962963 0.7767024305555555 0.669336574074074 0.10376157407407408 0.05055347222222223 -1.1967379450798035</string>
+<string>0.9914341435185184 0.884837962962963 0.7767024305555555 0.669336574074074 0.10376157407407408 0.05055347222222223 -1.085833054035902</string>
 <key>aid</key>
 <integer>1</integer>
+</dict>
+<dict>
+<key>param</key>
+<string>0.8999999761581421 1.0 0.8999999761581421 0.8999999761581421 1.0 0.8999999761581421 0.0</string>
 </dict>
 </array>
 <key>dialog_manager</key>
@@ -727,10 +811,10 @@ public class IdentifyAddressee {
 <dict>
 <key>contentRecencyLimit</key>
 <integer>4</integer>
-<key>firstName</key>
-<string></string>
 <key>lastName</key>
 <string>General</string>
+<key>firstName</key>
+<string></string>
 <key>offtopicInitiativeThreshold</key>
 <integer>2</integer>
 <key>randomChoiceRecencyLimit</key>
@@ -743,14 +827,6 @@ public class IdentifyAddressee {
 <string>House</string>
 <key>parent</key>
 <integer>1</integer>
-<key>class</key>
-<string>edu.usc.ict.npc.editor.model.Person</string>
-</dict>
-<dict>
-<key>firstName</key>
-<string>Toolkit</string>
-<key>lastName</key>
-<string>Example</string>
 <key>class</key>
 <string>edu.usc.ict.npc.editor.model.Person</string>
 </dict>
@@ -1018,16 +1094,6 @@ public class IdentifyAddressee {
 <string></string>
 <key>ID</key>
 <string>House</string>
-<key>colorAsInt</key>
-<integer>0</integer>
-</dict>
-<dict>
-<key>name</key>
-<string>Toolkit Example</string>
-<key>description</key>
-<string></string>
-<key>ID</key>
-<string>Toolkit Example</string>
 <key>colorAsInt</key>
 <integer>0</integer>
 </dict>
@@ -1683,7 +1749,7 @@ public class IdentifyAddressee {
 <key>qid</key>
 <integer>1</integer>
 <key>aid</key>
-<integer>2</integer>
+<integer>4</integer>
 <key>value</key>
 <integer>6</integer>
 </dict>
@@ -1691,7 +1757,7 @@ public class IdentifyAddressee {
 <key>qid</key>
 <integer>2</integer>
 <key>aid</key>
-<integer>4</integer>
+<integer>2</integer>
 <key>value</key>
 <integer>6</integer>
 </dict>
@@ -1707,7 +1773,7 @@ public class IdentifyAddressee {
 <key>qid</key>
 <integer>4</integer>
 <key>aid</key>
-<integer>5</integer>
+<integer>1</integer>
 <key>value</key>
 <integer>6</integer>
 </dict>
@@ -1715,7 +1781,31 @@ public class IdentifyAddressee {
 <key>qid</key>
 <integer>5</integer>
 <key>aid</key>
+<integer>5</integer>
+<key>value</key>
+<integer>6</integer>
+</dict>
+<dict>
+<key>qid</key>
+<integer>6</integer>
+<key>aid</key>
 <integer>3</integer>
+<key>value</key>
+<integer>6</integer>
+</dict>
+<dict>
+<key>qid</key>
+<integer>7</integer>
+<key>aid</key>
+<integer>2</integer>
+<key>value</key>
+<integer>6</integer>
+</dict>
+<dict>
+<key>qid</key>
+<integer>8</integer>
+<key>aid</key>
+<integer>7</integer>
 <key>value</key>
 <integer>6</integer>
 </dict>
